[gd_scene load_steps=57 format=2]

[ext_resource path="res://Entities/Enemies/graphics/dog_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Entities/Enemies/shared/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Entities/shared/HitboxArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/Weapons/shared/Weapon.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 429.81

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 80.5139, 79.9223 )

[sub_resource type="Animation" id=3]
resource_name = "AttackDown"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=4]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53 ]
}

[sub_resource type="Animation" id=5]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48 ]
}

[sub_resource type="Animation" id=6]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=9]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=10]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=11]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=13]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=14]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=15]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15, 16 ]
}

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "AttackLeft"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "AttackDown"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "AttackRight"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "AttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=20]
blend_point_0/node = SubResource( 16 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 17 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 18 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 19 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "MovingDown"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "MovingRight"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "MovingUp"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "MovingLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=25]
blend_point_0/node = SubResource( 21 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 22 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 23 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 24 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "StandingDown"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "StandingRight"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "StandingLeft"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "StandingUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=30]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 27 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 28 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 29 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachine" id=36]
states/Attack/node = SubResource( 20 )
states/Attack/position = Vector2( 529, 259.256 )
states/Moving/node = SubResource( 25 )
states/Moving/position = Vector2( 646, 115 )
states/Standing/node = SubResource( 30 )
states/Standing/position = Vector2( 406, 115 )
transitions = [ "Standing", "Moving", SubResource( 31 ), "Moving", "Standing", SubResource( 32 ), "Standing", "Attack", SubResource( 33 ), "Attack", "Standing", SubResource( 34 ), "Moving", "Attack", SubResource( 35 ) ]
start_node = "Standing"
graph_offset = Vector2( 0, 58.256 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=37]

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 81.1661, 79.8089 )

[sub_resource type="Animation" id=39]
resource_name = "EnemyAttackDown"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 120.0, 160.0, 200.0, 240.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=47]
resource_name = "EnemyAttackLeft"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -45.0, -85.0, -135.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=49]
resource_name = "EnemyAttackRigth"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 135.0, 85.0, 45.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=48]
resource_name = "EnemyAttackUp"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 60.0, 20.0, -20.0, -60.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="AnimationNodeAnimation" id=51]
animation = "EnemyAttackDown"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "EnemyAttackRigth"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "EnemyAttackLeft"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "EnemyAttackUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=50]
blend_point_0/node = SubResource( 51 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 52 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 53 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 54 )
blend_point_3/pos = Vector2( 0, -1 )

[sub_resource type="AnimationNodeBlendSpace2D" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=44]
states/Attack/node = SubResource( 50 )
states/Attack/position = Vector2( 504, 89 )
states/Nothing/node = SubResource( 41 )
states/Nothing/position = Vector2( 300, 89 )
transitions = [ "Nothing", "Attack", SubResource( 55 ), "Attack", "Nothing", SubResource( 56 ) ]
start_node = "Nothing"

[sub_resource type="AnimationNodeStateMachinePlayback" id=45]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 12
hframes = 5

[node name="AggroArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroArea"]
visible = false
shape = SubResource( 1 )

[node name="CollisionBox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 3 )
anims/AttackLeft = SubResource( 4 )
anims/AttackRight = SubResource( 5 )
anims/AttackUp = SubResource( 6 )
anims/MovingDown = SubResource( 7 )
anims/MovingLeft = SubResource( 8 )
anims/MovingRight = SubResource( 9 )
anims/MovingUp = SubResource( 10 )
anims/Standing = SubResource( 11 )
anims/StandingDown = SubResource( 12 )
anims/StandingLeft = SubResource( 13 )
anims/StandingRight = SubResource( 14 )
anims/StandingUp = SubResource( 15 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 36 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 37 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Moving/blend_position = Vector2( 0, 0 )
parameters/Standing/blend_position = Vector2( 0, 0 )

[node name="HitboxArea" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="HitboxArea" index="0"]
shape = SubResource( 38 )

[node name="EnemyAttackHitbox" parent="." instance=ExtResource( 4 )]
rotation = 4.18879

[node name="AnimationPlayer" parent="EnemyAttackHitbox" index="0"]
anims/EnemyAttackDown = SubResource( 39 )
anims/EnemyAttackLeft = SubResource( 47 )
anims/EnemyAttackRigth = SubResource( 49 )
anims/EnemyAttackUp = SubResource( 48 )

[node name="Sprite" parent="EnemyAttackHitbox" index="1"]
visible = false

[node name="AnimationTree" type="AnimationTree" parent="EnemyAttackHitbox"]
tree_root = SubResource( 44 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 45 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Nothing/blend_position = Vector2( 0, 0 )
[connection signal="body_entered" from="AggroArea" to="." method="_on_AggroArea_body_entered"]

[editable path="HitboxArea"]

[editable path="EnemyAttackHitbox"]
